; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/raffle/extr_keymap.c_encoder_update.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/raffle/extr_keymap.c_encoder_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@muse_mode = common dso_local global i64 0, align 8
@_RAISE = common dso_local global i32 0, align 4
@muse_offset = common dso_local global i32 0, align 4
@muse_tempo = common dso_local global i32 0, align 4
@KC_PGDN = common dso_local global i32 0, align 4
@KC_PGUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @encoder_update(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @muse_mode, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %30

5:                                                ; preds = %1
  %6 = load i32, i32* @_RAISE, align 4
  %7 = call i64 @IS_LAYER_ON(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %5
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32, i32* @muse_offset, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @muse_offset, align 4
  br label %18

15:                                               ; preds = %9
  %16 = load i32, i32* @muse_offset, align 4
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* @muse_offset, align 4
  br label %18

18:                                               ; preds = %15, %12
  br label %29

19:                                               ; preds = %5
  %20 = load i32, i32* %2, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i32, i32* @muse_tempo, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* @muse_tempo, align 4
  br label %28

25:                                               ; preds = %19
  %26 = load i32, i32* @muse_tempo, align 4
  %27 = sub nsw i32 %26, 1
  store i32 %27, i32* @muse_tempo, align 4
  br label %28

28:                                               ; preds = %25, %22
  br label %29

29:                                               ; preds = %28, %18
  br label %44

30:                                               ; preds = %1
  %31 = load i32, i32* %2, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %30
  %34 = load i32, i32* @KC_PGDN, align 4
  %35 = call i32 @register_code(i32 %34)
  %36 = load i32, i32* @KC_PGDN, align 4
  %37 = call i32 @unregister_code(i32 %36)
  br label %43

38:                                               ; preds = %30
  %39 = load i32, i32* @KC_PGUP, align 4
  %40 = call i32 @register_code(i32 %39)
  %41 = load i32, i32* @KC_PGUP, align 4
  %42 = call i32 @unregister_code(i32 %41)
  br label %43

43:                                               ; preds = %38, %33
  br label %44

44:                                               ; preds = %43, %29
  ret void
}

declare dso_local i64 @IS_LAYER_ON(i32) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
